--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
     overflow: hidden;
     display: flex;
     align-items: center;
+    user-select: none;
 }
 .slider .slides {
     display: flex;
